# court_auction_bot

./: .gitignore  PLAN.md  README.md  pyproject.toml
court_auction_api/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  services.py
court_auction_api/ui/: app.js  index.html  style.css
tests/: conftest.py  test_api.py
